# barq-cowork

./: .gitignore  README.md
.github/workflows/: release.yml
apps/desktop/: index.html  package-lock.json  package.json  tailwind.config.js  vite.config.ts
apps/desktop/src/: App.tsx  index.css
apps/desktop/src-tauri/: Cargo.toml  entitlements.plist  tauri.conf.json
apps/desktop/src-tauri/capabilities/: default.json
apps/desktop/src-tauri/icons/: icon.icns
apps/desktop/src-tauri/src/: lib.rs  main.rs
backend/: go.mod  go.sum
backend/cmd/barq-coworkd/: main.go
backend/internal/config/: config.go  loader.go
backend/internal/domain/: agent.go  approval.go  artifact.go  errors.go  event.go  memory.go  plan.go  project.go  provider.go  schedule.go  skill.go  task.go  task_test.go  workspace.go
backend/internal/generator/: color_utils.go  css_profile.go  docx_theme.go  generator.go  html_builder.go  html_to_docx.go  html_to_pdf.go  latex_omml.go  libreoffice.go  ooxml_parts.go  reference_docx.go  styled_boxes.go  xlsx_builder.go  xlsx_builder_test.go  xlsx_charts.go  xlsx_theme.go  (+10 more)
backend/pptx_engine/: api.py  architecture.md  deck_store.py  edit_engine.py  planner.py  renderer.py  requirements.txt  schema.py  slide_registry.py  template_parser.py  validator.py
backend/pptx_renderer/: build.mjs  package-lock.json  package.json  tsconfig.json
backend/scripts/: gen_docx.py  gen_pptx.py  pptx_bridge.py  preview_doc.py
configs/: default.yaml  default.zai-general.yaml
docs/: building.md  phase1.md
scripts/: gen-icons.go  gen-icons.py  mac-setup.command
(+144 files in other folders)
